Implemented ProductControllerTest and made some massive code refactoring